# python-applied-machine-learning

./: .gitignore  Makefile  README.md  _quarto.yml  pyproject.toml
ch_01/: 01_kmeans.ipynb  02_knn.ipynb
ch_02/: 01_linear_regression.ipynb  02_onnx.ipynb  taxi.onnx
ch_03/: 01_categorical.ipynb  02_classification.ipynb  03_multiclass.ipynb
ch_04/: 01_text_preprocessing.ipynb  02_sentiment_analysis.ipynb  03_naive_bayes.ipynb  04_recommender.ipynb
ch_05/: 01_svm.ipynb
ch_06/: 01_pca.ipynb  02_pca.ipynb  03_digits.ipynb  04_anomaly.ipynb  05_failure.ipynb
ch_07/: 01_client.ipynb  sentiment.onnx  sentiment.pkl  titanic.pkl
ch_09/: 01_basic.ipynb
docs/ch_01/: 01_kmeans.md  02_knn.md
docs/ch_02/: 01_linear_regression.md
docs/ch_03/: 01_categorical.md  02_classification.md  03_multiclass.md
